--- a/src_be/healthcare-booking/src/main/resources/application.properties
+++ b/src_be/healthcare-booking/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=healthcare-booking
 
 server.port = 8080
 # Connect MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/hrm
+spring.datasource.url=jdbc:mysql://localhost:3306/health_booking
 spring.datasource.username=root
 spring.datasource.password=123456
 
 # C?u hình Hibernate (JPA)
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #SECRET_KEY JWT, Secret Length= 32, https://jwtsecret.com/generate
