--- a/src_fe/HealthcareBooking/package.json
+++ b/src_fe/HealthcareBooking/package.json
@@ -58,6 +58,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.0.11"
   },
